--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@capacitor/app": "7.0.0",
     "@capacitor/core": "7.0.1",
     "@capacitor/haptics": "7.0.0",
-    "@capacitor/ios": "7.0.1",
+    "@capacitor/ios": "^7.0.1",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/vue": "^8.0.0",
@@ -35,8 +35,8 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
-    "typescript": "~5.6.2",
-    "vite": "~5.2.0",
+    "typescript": "5.7.3",
+    "vite": "5.4.14",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.1.10"
   },
